# LilyAssistant

./: .gitignore  License  README.md  bun.lockb  package.json  tailwind.config.js
src/: App.svelte  main.js  styles.css
src-sidecar/: build.sh  faiss.txt  models.py  requirements.txt  side.old.py  side.py  sidecar.py  sidecar.spec
src-sidecar/faiss-index/: index.faiss  index.pkl
src-sidecar/lily-sidecar/: pyvenv.cfg
src-sidecar/lily_api/: main.py
src-sidecar/lily_api/chat/: conversation.py  conversation_manager.py  hydrator.py  router.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/components/: Chat.svelte  ChatAIMessage.svelte  ChatHumanMessage.svelte  ChatTypingMessage.svelte  Option.svelte  OptionFlag.svelte  OptionInput.svelte  OptionList.svelte  StatusBar.svelte
src/lib/functions/: apiSettings.js  chat.js  clipboard.js  commandPalette.js  notifications.js  options.js  settings.js  sidecar.js  window.js
src/lib/stores/: chat.js  main.js  openai.js  settings.js  stream.js  textInput.js  view.js
src/lib/views/: ApiSettingsView.svelte  ChatView.svelte  SettingsView.svelte
